tests/baselines/reference/-57087-02.errors.txt
-57087-02.ts(21,5): error TS2345: Argument of type '{ (x: 1): 1 | 2; (x: 3): "2" | "3"; (x: 2): 1 | 2 | "2" | "3"; }' is not assignable to parameter of type '((x: 1 | 2) => 1 | 2) & ((x: 2 | 3) => "2" | "3")'.
  Type '{ (x: 1): 1 | 2; (x: 3): "2" | "3"; (x: 2): 1 | 2 | "2" | "3"; }' is not assignable to type '(x: 1 | 2) => 1 | 2'.
    Types of parameters 'x' and 'x' are incompatible.
      Type '1 | 2' is not assignable to type '1'.
        Type '2' is not assignable to type '1'.


==== -57087-02.ts (1 errors) ====
    interface FMap<T,R> {
        f:(x:T)=>R
        g(f:(x:T)=>R):R;
    }
    declare const x1: FMap<1|2,1|2>;
    x1.g(x1.f); // no error
    declare const x2: FMap<2|3,"2"|"3">;
    x2.g(x2.f); // no error
    const x = Math.random() < 0.5 ? x1 : x2;
    x.g; // (method) FMap<T, R>.g(f: ((x: 1 | 2) => 1 | 2) & ((x: 2 | 3) => "2" | "3")): 1 | 2 | "2" | "3"
    
    function ft3(x:1):1|2;
    function ft3(x:3):"2"|"3";
    function ft3(x:2):1|2|"2"|"3";
    //function ft3(x:1|2|3):1|2|"2"|"3";
    function ft3(x:1|2|3):1|2|"2"|"3"{
        if (x===1) return x1.f(x);
        if (x===3) return x2.f(x);
        return Math.random() < 0.5 ? x1.f(x) : x2.f(x);
    }
    x.g(ft3); // error
        ~~~
!!! error TS2345: Argument of type '{ (x: 1): 1 | 2; (x: 3): "2" | "3"; (x: 2): 1 | 2 | "2" | "3"; }' is not assignable to parameter of type '((x: 1 | 2) => 1 | 2) & ((x: 2 | 3) => "2" | "3")'.
!!! error TS2345:   Type '{ (x: 1): 1 | 2; (x: 3): "2" | "3"; (x: 2): 1 | 2 | "2" | "3"; }' is not assignable to type '(x: 1 | 2) => 1 | 2'.
!!! error TS2345:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:       Type '1 | 2' is not assignable to type '1'.
!!! error TS2345:         Type '2' is not assignable to type '1'.